[update] ar-building schema and dev public api url

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -92,6 +92,23 @@
     "tags": {
       "$": "Tags"
     },
+    "buildings": {
+      "$": "AR buildings",
+      "latitude": "Latitude",
+      "longitude": "Longitude",
+      "rotation": {
+        "$": "Rotation",
+        "x": "X-axis",
+        "y": "Y-axis",
+        "z": "Z-axis"
+      },
+      "file": {
+        "$": "File",
+        "object": ".obj File",
+        "material": ".mtl File",
+        "texture": "Texture"
+      }
+    },
     "attractions": {
       "attractions": "Attractions",
       "briefDesc": "Brief Description",
